@@ -1,4 +1,4 @@
-Copyright (c) 2007 Ben Johnson of Binary Logic (binarylogic.com)
+Copyright (c) 2008 Ben Johnson of Binary Logic (binarylogic.com)
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
